--- a/p12.html
+++ b/p12.html
@@ -26,7 +26,7 @@
        
         <section id="productdetails" class="section-p1">
             <div class="single-pro-image">
-                <img src="36.png" width="300" id="mainimg" height="300">
+                <img src="36.png" width="100%" id="mainimg">
                 <div class="small-img-group">
                     <div class="small-img-col">
                         <img src="36.png" alt="" width="100%" class="small-img">
@@ -47,8 +47,8 @@
 
             <div class="single-pro-details">
                 <h5> T-Shirt  </h5>
-                <h4> Mens Fashion T-Shirt / Summer collection </h4>
-                <h2> 470 LE </h2>
+                <h5> Mens Fashion T-Shirt / Summer collection </h5>
+                <h4> 470 LE </h4>
                 <select class="select">
                     <option>Select your Suitable size</option>
                     <option>S</option>
