--- a/p3.html
+++ b/p3.html
@@ -26,15 +26,15 @@
        
         <section id="productdetails" class="section-p1">
             <div class="single-pro-image">
-                <img src="16.png" width="300" id="mainimg" height="320">
+                <img src="16.png" width="100%" id="mainimg">
 
                
             </div>
 
             <div class="single-pro-details">
                 <h5> T-Shirt  </h5>
-                <h4> Mens Fashion T-Shirt / Summer collection </h4>
-                <h2> 470 LE </h2>
+                <h5> Mens Fashion T-Shirt / Summer collection </h5>
+                <h4> 470 LE </h4>
                 <select class="select">
                     <option>Select your Suitable size</option>
                     <option>S</option>
