--- a/p4.html
+++ b/p4.html
@@ -26,7 +26,7 @@
        
         <section id="productdetails" class="section-p1">
             <div class="single-pro-image">
-                <img src="4.jpg" width="300" id="mainimg" height="320">
+                <img src="4.jpg" width="100%" id="mainimg">
                 <div class="small-img-group">
                     <div class="small-img-col">
                         <img src="4.jpg" alt="" width="100%" class="small-img">
@@ -51,8 +51,8 @@
 
             <div class="single-pro-details">
                 <h5> T-Shirt  </h5>
-                <h4> Mens Fashion T-Shirt / Summer collection </h4>
-                <h2> 550 LE </h2>
+                <h5> Mens Fashion T-Shirt / Summer collection </h5>
+                <h4> 550 LE </h4>
                 <select class="select">
                     <option>Select your Suitable size</option>
                     <option>S</option>
