--- a/p37.html
+++ b/p37.html
@@ -26,7 +26,7 @@
        
         <section id="productdetails" class="section-p1">
             <div class="single-pro-image">
-                <img src="104.png" width="300" id="mainimg" height="300">
+                <img src="104.png" width="100%" id="mainimg">
                 <div class="small-img-group">
                     <div class="small-img-col">
                         <img src="105.png" alt="" width="100%" class="small-img">
