--- a/product1.html
+++ b/product1.html
@@ -26,7 +26,7 @@
        
         <section id="productdetails" class="section-p1">
             <div class="single-pro-image">
-                <img src="0.png" width="100%" id="mainimg">
+                <img src="0.png" width="100" id="mainimg" height="120">
                 <div class="small-img-group">
                     <div class="small-img-col">
                         <img src="1.png" alt="" width="100%" class="small-img">
@@ -62,7 +62,6 @@
 
                 </select>
                 <input type="number" value="1">
-                <button class="normal">Add to Cart</button>
             </div>
         </section>
         <section id="banner" class="section-m1">
