--- a/p16.html
+++ b/p16.html
@@ -26,7 +26,7 @@
        
         <section id="productdetails" class="section-p1">
             <div class="single-pro-image">
-                <img src="50.png" width="100%" id="mainimg">
+                <img src="50.png" width="120" id="mainimg" height="170">
                 <div class="small-img-group">
                     <div class="small-img-col">
                         <img src="50.png" alt="" width="100%" class="small-img">
