--- a/p3.html
+++ b/p3.html
@@ -26,7 +26,7 @@
        
         <section id="productdetails" class="section-p1">
             <div class="single-pro-image">
-                <img src="16.png" width="100%" id="mainimg">
+                <img src="16.png" width="120" id="mainimg" height="170">
 
                
             </div>
