--- a/p36.html
+++ b/p36.html
@@ -26,7 +26,7 @@
        
         <section id="productdetails" class="section-p1">
             <div class="single-pro-image">
-                <img src="102.png" width="100%" id="mainimg">
+                <img src="102.png" width="120" id="mainimg" height="170">
                 <div class="small-img-group">
                     <div class="small-img-col">
                         <img src="102.png" alt="" width="100%" class="small-img">
@@ -51,8 +51,8 @@
 
             <div class="single-pro-details">
                 <h5> Cloth Pants  </h5>
-                <h4> Mens Fashion Cloth Pants / Summer collection </h4>
-                <h2> 650 LE </h2>
+                <h5> Mens Fashion Cloth Pants / Summer collection </h5>
+                <h4> 650 LE </h4>
                 <select class="select">
                     <option>Select your Suitable size</option>
                     <option>S</option>
