--- a/index.html
+++ b/index.html
@@ -29,6 +29,37 @@
             <button>Shop Now</button>
         </section>
 
+        <!--=======Category========-->
+
+        <section id="categories">
+            <h2>categories</h2>
+
+            <div class="category-container">
+                <a href="#" class="category-box">
+                    <img src="0.png" alt="">
+                    <span>T-Shirts</span>
+                </a>
+
+                <a href="#" class="category-box">
+                    <img src="0.png" alt="">
+                    <span>T-Shirts</span>
+                </a>
+
+                <a href="#" class="category-box">
+                    <img src="0.png" alt="">
+                    <span>T-Shirts</span>
+                </a>
+
+                <a href="#" class="category-box">
+                    <img src="0.png" alt="">
+                    <span>T-Shirts</span>
+                </a>
+            </div>
+            
+        </section>
+
+    
+
         <section id="product1" class="section-p1">
             <h2>featured Products</h2>
             <p>summer collection</p>
