--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         
         <section id="header">
             <!-- <a href="#"><img src="logo.jpg" class="logo" alt=""></a>  -->
-             <h4>5ROGA</h4>
+             <h4>5ROGA Store</h4>
 
             <div>
                 <ul id="navbar">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">shop</a></li>
-                    <li><a href=""><i class="far fa-shopping-bag"></i></a></li>
+                    <li><a href="index.html">الرئيسية</a></li>
+                    <li><a href="shop.html">تسوق</a></li>
+                    <li><a href="category.html">الاقسام</a></li>
+
                 </ul>
             </div>
         </section>
@@ -32,22 +33,22 @@
         <!--=======Category========-->
 
         <section id="categories">
-            <h2>categories</h2>
+            <h2>الاقسام</h2>
 
             <div class="category-container">
                 <a href="t-shirt.html" class="category-box">
                     <img src="0.png" alt="">
-                    <span>T-Shirts</span>
+                    <span>التيشيرتات</span>
                 </a>
 
                 <a href="shirt.html" class="category-box">
                     <img src="54.png" alt="">
-                    <span>Shirts</span>
+                    <span>القمصان</span>
                 </a>
 
                 <a href="pants.html" class="category-box">
                     <img src="99.png" alt="">
-                    <span>Pants</span>
+                    <span>البنطلونات</span>
                 </a>
 
             </div>
@@ -58,7 +59,7 @@
 
         <section id="product1" class="section-p1">
             <h2>featured Products</h2>
-            <p>summer collection</p>
+            <p>تشكيلةالصيف</p>
             <div class="pro-container">
                 <a href="cart.html"></a>
 
