--- a/index.html
+++ b/index.html
@@ -355,8 +355,6 @@
                     </div>
                     <a href="p16.html"><i class="fal fa-shopping-bag cart"></i></a>
                 </div>
-
-
                 <div class="pro">
                     <img src="52.png" alt="">
                     <div class="des">
@@ -464,8 +462,6 @@
                     </div>
                     <a href="p22.html"><i class="fal fa-shopping-bag cart"></i></a>
                 </div>
-
-
                 <div class="pro">
                     <img src="69.png" alt="">
                     <div class="des">
@@ -519,8 +515,6 @@
                     </div>
                     <a href="p25.html"><i class="fal fa-shopping-bag cart"></i></a>
                 </div>
-
-
                 <div class="pro">
                     <img src="83.png" alt="">
                     <div class="des">
@@ -748,10 +742,12 @@
 
         <footer class="section-p1">
             <div class="col">
-                <h2>5ROGA</h2>
+                <h2>5ROGA Store</h2>
                 <h4>Contact</h4>
-                <p><strong>Address: </strong>Alex</p>
+                <p><strong>Address: </strong>كفر الدوار</p>
+                <p><strong>Phone:  </strong>01285407029</p>
                 <p><strong>Phone:  </strong>01207567138</p>
+                <p><strong>Phone:  </strong>01028536335</p>
 
             </div>
             <div class="follow">
